# Apkana

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/: PORTABLE_SETUP.md  RELEASE_NOTES.md
.github/workflows/: release.yml
src/: app.rs  config.rs  main.rs  utils.rs
src/app/: handlers.rs  logging.rs  persistence.rs  pipeline.rs  validation.rs  view.rs
src/tools/: adb.rs  apktool.rs  mod.rs  signer.rs  zipalign.rs
src/tools/merger/: apk_merge.rs  archive.rs  manifest.rs  mod.rs  resources.rs
src/ui/: build_tab.rs  common.rs  decode_tab.rs  install_tab.rs  log_panel.rs  merge_tab.rs  mod.rs  settings_modal.rs  sign_tab.rs  styles.rs  tabs.rs
